atnaujinau versija kodo

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -16,24 +16,6 @@
     <link rel="stylesheet" href="../index.css">
 
     <style>
-        /* CSS Kintamųjų deklaravimas, kad būtų galima naudoti pagrindines spalvas */
-        :root {
-            --main-accent-color: rgb(255, 44, 90); /* Pagrindinė akcento spalva (rožinė) */
-            --secondary-text-color: #555; /* Antrinė teksto spalva */
-            --primary-text-color: #333; /* Pagrindinė teksto spalva */
-            --light-background-color: #f8f8f8; /* Švelniai pilkas fonas */
-            --white-background-color: #fff; /* Baltas fonas */
-            --dark-footer-color: #333; /* Tamsi poraštės fono spalva */
-            /* Pridėta RGB versija permatomumui CSS. Išvedama iš --main-accent-color. */
-            --main-accent-color-rgb: 255, 44, 90;
-        }
-
-        body {
-            background-color: var(--light-background-color); /* Kad atitiktų pagrindinio puslapio foną */
-            font-family: 'Poppins', sans-serif; /* Užtikrina, kad Poppins bus naudojamas */
-            color: var(--primary-text-color);
-        }
-
         /* Viršutinė antraštė kontaktų puslapyje */
         .contact-page-header {
             background-color: var(--main-accent-color); /* Pagrindinė akcento spalva */
@@ -148,7 +130,7 @@
         <p>Svetainę sukūrė: Laura Petkevič</p>
         <p>Vilniaus universiteto, Kartografijos ir GIS III kurso studentė.</p>
         <p>Ši svetainė yra studentės atlikta 4-oji praktinė užduotis studijų dalyko "Interneto technologijos ir GIS", skirta pademonstruoti gebėjimus dirbti su HTML, CSS ir integruoti interaktyvius žemėlapius.</p>
-        <p>El. paštas: <a href="mailto:laura.petkevic@chgf.stud.vu.lt">laura.petkevic@chgf.stud.vu.lt</a></p>
+        <p>El. paštas: <a href="mailto:laura.petkevic@chgf.stud.vu.lt">laura.petkevic@chgf.vu.lt</a></p>
         <p>GitHub: <a href="https://github.com/LAURAPETGEO" target="_blank">laurapetGeo</a></p>
     </div>
 
@@ -173,7 +155,7 @@
         Autorius : Laura Petkevič <br> Vilniaus Universitetas, Kartografijos ir GIS
         <br> Svetainė parengta kaip 4-oji praktinė užduotis studijų dalyko "Interneto technologijos ir GIS".
         <br> Sukūrimo data: 2025 m. gegužės 29 d.
-        <br> Kontaktai: <a href="mailto:laura.petkevic@chgf.stud.vu.lt">laura.petkevic@chgf.stud.vu.lt</a> | <a href="https://github.com/LAURAPETGEO" target="_blank">laurapetGeo</a>
+        <br> Kontaktai: <a href="mailto:laura.petkevic@chgf.stud.vu.lt">laura.petkevic@chgf.vu.lt</a> | <a href="https://github.com/LAURAPETGEO" target="_blank">laurapetGeo</a>
     </div>
 
 </body>
